2014-01-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: S/MIME signed entity respects
	mime-pgp-verify-when-preview's value.

	* mime-pgp.el (mime-display-multipart/signed): Renamed from
	mime-display-multipart/pgp-signed.  Support S/MIME signed entity.

2014-01-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-pgp-verify-when-preview): Set default to t.

2014-01-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-pgp-verify-when-preview): New customizable
	variable.
	(mime-display-multipart/pgp-signed): New function.

	* semi-setup.el: Add setting for pgp-signed entity.

2014-01-27  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Add setting for previewing
	application/pkcs7-signature entity.

	* mime-pgp.el (mime-preview-application/*-signature): Handle errors.

2014-01-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-preview-message): Switch to the original
	buffer when translation fails.  Moreover, kill temporary buffer
	if mime-edit-debug is nil.

2014-01-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-debug): New variable.
	(mime-edit-translate-buffer): Do not undo if above variable is
	non-nil.

2014-01-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-translate-buffer): Undo buffer when
	translation fails and buffer is modified.  Do not catch
	mime-edit-error tag, because no one throws in SEMI-EPG.
	(mime-edit-sign-pgp-mime, mime-edit-encrypt-pgp-mime)
	(mime-edit-sign-smime, mime-edit-encrypt-smime): Remove
	condition-case.

2014-01-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Prevent mime-w3m-insinuate function from
	modifying mime-preview-condition and
	mime-view-type-subtype-score-alist.  Make mime-w3m-insinuate
	function to mofidy mime-view-text/html-previewer's value.

2014-01-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	More customizable text/html entity handling.  Now you can switch
	text/html entity previewer and score by modifying